--- a/nilai.html
+++ b/nilai.html
@@ -1,407 +1,211 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tabel Perolehan Nilai</title>
 </head>
-
 <body>
+
+  <h2 align="center">📊 Daftar Nilai Mahasiswa</h2>
   <header>
-    <h1>Tabel Perolehan Nilai</h1>
+
     <nav>
-   <a href="index.html">🏠 Blog</a> |
+      <p>
+      <a href="index.html">🏠 Blog</a> |
         <a href="register.html">📝 Form Pendaftaran</a> |
         <a href="nilai.html">📊 Tabel Nilai</a> |
         <a href="cv.html">💼 CV</a>
+      </p>
     </nav>
+    <hr>
   </header>
 
-  <main>
-    <table border="1" cellpadding="5" cellspacing="0">
-      <caption>Daftar Nilai Mahasiswa</caption>
-      <thead>
-        <tr>
-          <th rowspan="3">No</th>
-          <th rowspan="3">NIM</th>
-          <th rowspan="3">Nama</th>
-          <th rowspan="3">Program Studi</th>
-          <th rowspan="3">Kelas</th>
-          <th colspan="2">Bentuk Komponen Bobot / Nilai Akhir</th>
-          <th colspan="3">Kuis</th>
-          <th colspan="5">Proyek</th>
-          <th colspan="3">Tugas</th>
-          <th colspan="3">UAS</th>
-          <th colspan="3">UTS</th>
-          <th colspan="2">Bentuk Komponen Bobot / Nilai</th>
-          <th rowspan="3">Nilai Akhir</th>
-        </tr>
-        <tr>
-          <th colspan="2">Bobot</th>
-          <th colspan="3">Bobot</th>
-          <th colspan="5">Bobot</th>
-          <th colspan="3">Bobot</th>
-          <th colspan="3">Bobot</th>
-          <th colspan="3">Bobot</th>
-          <th colspan="2">Bobot</th>
-        </tr>
-        <tr>
-          <th>Nilai Akhir</th>
-          <th>Bobot</th>
-          <th>K1-2</th>
-          <th>K1-2</th>
-          <th>Bobot</th>
-          <th>P1-1</th>
-          <th>P2-1</th>
-          <th>P3-1</th>
-          <th>Bobot</th>
-          <th>Total</th>
-          <th>T1-1</th>
-          <th>T2-1</th>
-          <th>Bobot</th>
-          <th>UAS1-1</th>
-          <th>UAS2-1</th>
-          <th>Bobot</th>
-          <th>UTS1-1</th>
-          <th>UTS2-2</th>
-          <th>UTS3-3</th>
-          <th>Total</th>
-          <th>Bobot</th>
-          <th>Nilai</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>1152400</td>
-          <td>Elkana Sitorus</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>1152400</td>
-          <td>Paul Bornok Manurung</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>1152400</td>
-          <td>Ruth Manurung</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>1152400</td>
-          <td>Glen Sitorus</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>1152400</td>
-          <td>Marshall Manurung</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>1152400</td>
-          <td>Sefa Situmeang</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td>1152400</td>
-          <td>Obenhard Pasaribu</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>8</td>
-          <td>1152400</td>
-          <td>Lola Tampubolon</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td>1152400</td>
-          <td>Firman Hutasoit</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>10</td>
-          <td>1152400</td>
-          <td>Jelita Sibarani</td>
-          <td>Sarjana</td>
-          <td>11F1</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th colspan="5">Rata-rata</th>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        </tr>
-      </tfoot>
-    </table>
-  </main>
+  <table border="1" cellpadding="4" cellspacing="0" align="center">
+    <thead>
+      <tr align="center">
+        <th rowspan="2">No</th>
+        <th rowspan="2">NIM</th>
+        <th rowspan="2">Nama</th>
+        <th rowspan="2">Program Studi</th>
+        <th rowspan="2">Kelas</th>
+        <th colspan="2">Bentuk Komponen<br>Bobot / Nilai Akhir</th>
+        <th colspan="4">Kuis</th>
+        <th colspan="5">Proyek</th>
+        <th colspan="4">Tugas</th>
+        <th colspan="3">UAS</th>
+        <th colspan="4">UTS</th>
+        <th colspan="2">Bentuk Komponen<br>Bobot / Nilai</th>
+      </tr>
+      <tr align="center">
+        <th>Bobot</th>
+        <th>Nilai Akhir</th>
+        <th>K1-1</th>
+        <th>K1-2</th>
+        <th>Total</th>
+        <th>Bobot</th>
+        <th>P1-1</th>
+        <th>P2-1</th>
+        <th>P3-1</th>
+        <th>Total</th>
+        <th>Bobot</th>
+        <th>T1-1</th>
+        <th>T2-1</th>
+        <th>T3-1</th>
+        <th>Total</th>
+        <th>Bobot</th>
+        <th>UAS1-1</th>
+        <th>UAS2-1</th>
+        <th>Total</th>
+        <th>Bobot</th>
+        <th>UTS1-1</th>
+        <th>UTS2-1</th>
+        <th>UTS3-1</th>
+        <th>Total</th>
+        <th>Bobot</th>
+      </tr>
+    </thead>
+
+    <tbody align="center">
+      <tr>
+        <td>1</td>
+        <td>11S2400</td>
+        <td>David Lodewick Simbolon</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>11S2400</td>
+        <td>Edwin Christofel</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>11S2400</td>
+        <td>Aditya Putera Kelat</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>11S2400</td>
+        <td>Cain Donovan</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>11S2400</td>
+        <td>Ruth Claudia Panggabean</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>11S2400</td>
+        <td>Martha Saulina Nababan</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>11S2400</td>
+        <td>Mei Marliana Siregar</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>11S2400</td>
+        <td>Sandra Triana Sihite</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>11S2400</td>
+        <td>Dea Mariana Siregar</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>11S2401</td>
+        <td>Dimas Rezan Samuel</td>
+        <td>Sarjana</td>
+        <td>11F1</td>
+        <td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td>
+        <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      </tr>
+    </tbody>
+
+    <tfoot>
+      <tr align="center">
+        <th colspan="5">Rata-rata</th>
+        <td colspan="25">0</td>
+      </tr>
+    </tfoot>
+  </table>
+
 </body>
 </html>
