--- a/register.html
+++ b/register.html
@@ -2,138 +2,137 @@
 <html lang="id">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Pendaftaran </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form Pendaftaran</title>
 </head>
 
 <body>
-  <!-- HEADER -->
-  <header>
-    <h1 align="center">📑 Form Pendaftaran </h1>
-    <nav align="center">
-      <a href="index.html">🏠 Blog</a> |
-      <a href="register.html">📝 Form Pendaftaran</a> |
-      <a href="nilai.html">📊 Tabel Perolehan Nilai</a> |
-      <a href="cv.html">💼 CV</a>
-    </nav>
-    <hr>
-  </header>
+    <!-- HEADER -->
+    <header>
+        <h1>📑 Form Pendaftaran</h1>
+        <nav>
+            <a href="index.html">🏠 Blog</a> |
+            <a href="register.html">📝 Form Pendaftaran</a> |
+            <a href="nilai.html">📊 Tabel Perolehan Nilai</a> |
+            <a href="cv.html">💼 CV</a>
+        </nav>
+        <hr>
+    </header>
 
-  <!-- KONTEN UTAMA: 3 KOLOM -->
-  <table border="0" width="100%" cellpadding="10">
-    <tr valign="top">
-      <!-- KIRI -->
-      <td width="25%">
-        <h3>ℹ️ Informasi</h3>
-        <p>Selamat datang di halaman pendaftaran unik ini! 🎉</p>
-        <p>Silakan isi data diri dengan lengkap, pastikan semua benar agar proses berjalan lancar.</p>
-        <p><b>Tips:</b></p>
-        <ul>
-          <li>Gunakan email aktif</li>
-          <li>Pilih password yang kuat</li>
-          <li>Baca syarat & ketentuan</li>
-        </ul>
-      </td>
+    <!-- CONTAINER UTAMA UNTUK KONTEN (tanpa CSS, ini akan tampil menumpuk) -->
+    <div>
+        <!-- ASIDE KIRI: Informasi sampingan -->
+        <aside>
+            <h3>ℹ️ Informasi</h3>
+            <p>Selamat datang di halaman pendaftaran  🎉</p>
+            <p>Silakan isi data diri dengan lengkap, pastikan semua benar agar proses berjalan lancar.</p>
+            <p><b>Tips:</b></p>
+            <ul>
+                <li>Gunakan email aktif</li>
+                <li>Pilih password yang kuat</li>
+                <li>Baca syarat & ketentuan</li>
+            </ul>
+        </aside>
 
-      <!-- TENGAH -->
-      <td width="50%">
+        <!-- MAIN: Konten utama, yaitu formulir -->
         <main>
-          <form action="#" method="post">
+            <form action="#" method="post">
 
-            <!-- DATA DIRI -->
-            <fieldset>
-              <legend><b>👤 Data Diri</b></legend>
-              <p>
-                <label for="nama">Nama Lengkap:</label><br>
-                <input type="text" id="nama" name="nama" placeholder="Nama lengkap Anda" required>
-              </p>
-              <p>
-                Jenis Kelamin:<br>
-                <input type="radio" id="laki" name="gender" value="Laki-laki" required>
-                <label for="laki">Laki-laki</label>
-                <input type="radio" id="perempuan" name="gender" value="Perempuan">
-                <label for="perempuan">Perempuan</label>
-              </p>
-              <p>
-                <label for="tempat">Tempat Lahir:</label><br>
-                <input type="text" id="tempat" name="tempat" placeholder="Kota kelahiran" required>
-              </p>
-              <p>
-                <label for="tanggal">Tanggal Lahir:</label><br>
-                <input type="date" id="tanggal" name="tanggal" required>
-              </p>
-            </fieldset>
+                <!-- DATA DIRI -->
+                <fieldset>
+                    <legend><b>👤 Data Diri</b></legend>
+                    <p>
+                        <label for="nama">Nama Lengkap:</label><br>
+                        <input type="text" id="nama" name="nama" placeholder="Nama lengkap Anda" required>
+                    </p>
+                    <p>
+                        Jenis Kelamin:<br>
+                        <input type="radio" id="laki" name="gender" value="Laki-laki" required>
+                        <label for="laki">Laki-laki</label>
+                        <input type="radio" id="perempuan" name="gender" value="Perempuan">
+                        <label for="perempuan">Perempuan</label>
+                    </p>
+                    <p>
+                        <label for="tempat">Tempat Lahir:</label><br>
+                        <input type="text" id="tempat" name="tempat" placeholder="Kota kelahiran" required>
+                    </p>
+                    <p>
+                        <label for="tanggal">Tanggal Lahir:</label><br>
+                        <input type="date" id="tanggal" name="tanggal" required>
+                    </p>
+                </fieldset>
 
-            <br>
+                <br>
 
-            <!-- HOBI -->
-            <fieldset>
-              <legend><b>🎯 Hobi & Minat</b></legend>
-              <p><input type="checkbox" id="membaca" name="hobi" value="Membaca">
-                <label for="membaca">📚 Membaca</label></p>
-              <p><input type="checkbox" id="olahraga" name="hobi" value="Olahraga">
-                <label for="olahraga">⚽ Olahraga</label></p>
-              <p><input type="checkbox" id="musik" name="hobi" value="Musik">
-                <label for="musik">🎵 Musik</label></p>
-            </fieldset>
+                <!-- HOBI -->
+                <fieldset>
+                    <legend><b>🎯 Hobi & Minat</b></legend>
+                    <p><input type="checkbox" id="membaca" name="hobi" value="Membaca">
+                        <label for="membaca">📚 Membaca</label>
+                    </p>
+                    <p><input type="checkbox" id="olahraga" name="hobi" value="Olahraga">
+                        <label for="olahraga">⚽ Olahraga</label>
+                    </p>
+                    <p><input type="checkbox" id="musik" name="hobi" value="Musik">
+                        <label for="musik">🎵 Musik</label>
+                    </p>
+                </fieldset>
 
-            <br>
+                <br>
 
-            <!-- DETAIL AKUN -->
-            <fieldset>
-              <legend><b>🔑 Detail Akun</b></legend>
-              <p>
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" placeholder="contoh@email.com" required>
-              </p>
-              <p>
-                <label for="username">Username:</label><br>
-                <input type="text" id="username" name="username" placeholder="Buat username unik" required>
-              </p>
-              <p>
-                <label for="password">Password:</label><br>
-                <input type="password" id="password" name="password" placeholder="Masukkan password" required>
-              </p>
-            </fieldset>
+                <!-- DETAIL AKUN -->
+                <fieldset>
+                    <legend><b>🔑 Detail Akun</b></legend>
+                    <p>
+                        <label for="email">Email:</label><br>
+                        <input type="email" id="email" name="email" placeholder="contoh@email.com" required>
+                    </p>
+                    <p>
+                        <label for="username">Username:</label><br>
+                        <input type="text" id="username" name="username" placeholder="Buat username unik" required>
+                    </p>
+                    <p>
+                        <label for="password">Password:</label><br>
+                        <input type="password" id="password" name="password" placeholder="Masukkan password" required>
+                    </p>
+                </fieldset>
 
-            <br>
+                <br>
 
-            <!-- PERSYARATAN -->
-            <fieldset>
-              <legend><b>✅ Persetujuan</b></legend>
-              <p>
-                <input type="checkbox" id="persetujuan" name="persetujuan" required>
-                <label for="persetujuan">Saya menyetujui seluruh syarat & ketentuan yang berlaku</label>
-              </p>
-            </fieldset>
+                <!-- PERSYARATAN -->
+                <fieldset>
+                    <legend><b>✅ Persetujuan</b></legend>
+                    <p>
+                        <input type="checkbox" id="persetujuan" name="persetujuan" required>
+                        <label for="persetujuan">Saya menyetujui seluruh syarat & ketentuan yang berlaku</label>
+                    </p>
+                </fieldset>
 
-            <br>
+                <br>
 
-            <!-- TOMBOL -->
-            <div align="center">
-              <button type="reset">🔄 Reset</button>
-              <button type="submit">📩 Daftar Sekarang</button>
-            </div>
-          </form>
+                <!-- TOMBOL -->
+                <div>
+                    <button type="reset">🔄 Reset</button>
+                    <button type="submit">📩 Daftar Sekarang</button>
+                </div>
+            </form>
         </main>
-      </td>
 
-      <!-- KANAN -->
-      <td width="25%">
-        <h3>💡 Catatan</h3>
-        <p>Pendaftaran ini bersifat gratis dan terbuka untuk siapa saja.</p>
-        <p>Gunakan form ini sebaik-baiknya untuk mengisi data Anda. Setelah mendaftar, Anda akan menerima email konfirmasi.</p>
-        <p><b>Kategori peserta:</b></p>
-        <ol>
-          <li>Mahasiswa</li>
-          <li>Pelajar</li>
-          <li>Profesional</li>
-        </ol>
-      </td>
-    </tr>
-  </table>
-
+        <!-- ASIDE KANAN: Catatan tambahan -->
+        <aside>
+            <h3>💡 Catatan</h3>
+            <p>Pendaftaran ini bersifat gratis dan terbuka untuk siapa saja.</p>
+            <p>Gunakan form ini sebaik-baiknya untuk mengisi data Anda. Setelah mendaftar, Anda akan menerima email konfirmasi.</p>
+            <p><b>Kategori peserta:</b></p>
+            <ol>
+                <li>Mahasiswa</li>
+                <li>Pelajar</li>
+                <li>Profesional</li>
+            </ol>
+        </aside>
+    </div>
 
 </body>
+
 </html>
